--- a/css/style.css
+++ b/css/style.css
@@ -90,24 +90,22 @@ a {
 .site-navigation li {
   width: 19%;
   padding-top: 15px;
-}
-
-.site-navigation li:first-child {
-  width: 228px;
+  width: 227px;
 }
 
 .site-navigation li:nth-child(3) {
-  margin-left: 30%;
-  width: 100px;
+  margin-left: 148px;
 }
 
-.site-navigation li:last-child {
-  width: 210px;
+.site-navigation li:nth-child(3) a {
+  text-align: right;
 }
 
 .site-navigation li:last-child a {
   text-align: right;
 }
+
+
 
 .intro {
   width: 1200px;
@@ -681,7 +679,7 @@ a {
 }
 
 .form-input-checkbox:focus + label::before {
-  border: 1px solid transparent;
+  border-color: var(--basic-white);
 }
 
 .range-filter {
@@ -949,7 +947,7 @@ a {
 
 .hotel-text {
   font-size: 14px;
-  line-height: 21px;
+  line-height: 22px;
   font-weight: normal;
   margin: 0px 9px 15px 0px;
   grid-column: 1/2;
@@ -958,7 +956,7 @@ a {
 
 .hotel-item {
   font-size: 14px;
-  line-height: 26px;
+  line-height: 22px;
   font-weight: normal;
   margin: 0px 0px 15px 0px;
   grid-column: 2/3;
@@ -981,14 +979,13 @@ a {
 
 .rate {
   width: 110px;
-  height: 27px;
+  height: 20px;
   font-size: 14px;
   text-align: center;
   font-weight: normal;
   background-color: var(--special-grey-rate);
-  padding-top: 11px;
-  padding-left: 10px;
-  margin-top: 5px;
+  padding: 5px 0 5px 5px;
+  margin: 6px 0 0 5px;
 }
 
 /* Grid */
@@ -1117,7 +1114,7 @@ a {
 .appointment-date-input {
   border: none;
   background-color: var(--special-grey-rate);
-  height: 38px;
+  height: 36px;
   width: 160px;
   margin-left: 20px;
   margin-right: 3px;
@@ -1126,6 +1123,7 @@ a {
   color: var(--basic-black);
   text-transform: uppercase;
   font-weight: bold;
+  border: 1px solid var(--special-grey-modal-input);
 }
 
 .appointment-date-input:hover {
@@ -1136,7 +1134,7 @@ a {
 .appointment-date-input:active,
 .appointment-date-input:focus {
   background-color: transparent;
-  border: 0px solid var(--special-grey-modal-input);
+  border-color: var(--special-grey-modal-input);
 }
 
 .appointment-button {
